<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="name.uhmann.pathintersection.MainActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/border_orange">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioButton_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textColor="@color/green"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <SeekBar
                android:id="@+id/seekBar_pointIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
            
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x" />

                <SeekBar
                    android:id="@+id/seekBarX"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y" />

                <SeekBar
                    android:id="@+id/seekBarY"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center">

            <Button
                android:id="@+id/cmd_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/minus_icon_orange"
                android:onClick="onButtonClicked" />

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/cmd_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/plus_icon_orange"
                android:onClick="onButtonClicked" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_grey"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/darkGrey"
            android:textAlignment="center"
            android:text="@string/label_paths_intersect" />

        <TextView
            android:id="@+id/txt_pathsIntersect"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/paths_do_intersect"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
